[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Inimigos/Flying eye/Flight.png" type="Texture" id=1]
[ext_resource path="res://Assets/Inimigos/Flying eye/Attack2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Inimigos/Flying eye/Take Hit.png" type="Texture" id=3]
[ext_resource path="res://Assets/Inimigos/Flying eye/Death.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Olho_voador.gd" type="Script" id=5]
[ext_resource path="res://Assets/Efeitos_sonoros/Inimigos/blood-splash.wav" type="AudioStream" id=6]

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0.0497925, 0.456432, 0.838174 )
colors = PoolColorArray( 0.616699, 0, 0, 1, 0.777989, 0.191419, 0.19802, 1, 1, 0.407843, 0.458824, 1 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 18 )

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=20]
flag_disable_z = true
spread = 30.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -300.0
scale = 2.0
scale_curve = SubResource( 17 )
color_ramp = SubResource( 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.5, 15.8854 )

[sub_resource type="Animation" id=4]
resource_name = "Atacar"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.5 ), Vector2( 12, 9.95868 ), Vector2( 11.5, 8.49929 ), Vector2( 11, 7.9868 ), Vector2( 9.5, 8.98967 ), Vector2( 8.5, 8.48967 ), Vector2( 8.5, 12.494 ), Vector2( 8, 7.45587 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.5 ), Vector2( 4, -20.0413 ), Vector2( 7.5, -21.5007 ), Vector2( 10, -22.0132 ), Vector2( 7.5, -21.0103 ), Vector2( 6.5, -20.5103 ), Vector2( 6.5, -21.506 ), Vector2( 8, -22.5441 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.5 ), Vector2( 12, 10 ), Vector2( 11.5, 8.5 ), Vector2( 11, 8 ), Vector2( 9.5, 9 ), Vector2( 8.5, 8.5 ), Vector2( 8.5, 12.5 ), Vector2( 8, 7.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.5 ), Vector2( 4, -20 ), Vector2( 7.5, -21.5 ), Vector2( 10, -22 ), Vector2( 7.5, -21 ), Vector2( 6.5, -20.5 ), Vector2( 6.5, -21.5 ), Vector2( 8, -22.5 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.55, 0.65, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "fim_do_hit"
}, {
"args": [  ],
"method": "morrer"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Dano"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.8854 ), Vector2( 20.5, 15.8854 ), Vector2( 13, 14.3854 ), Vector2( 10, 13.3854 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.1146 ), Vector2( 2.5, -16.1146 ), Vector2( 5, -14.6146 ), Vector2( 3, -13.6146 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.5 ), Vector2( 20.5, 15.5 ), Vector2( 13, 12 ), Vector2( 10, 11 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.5 ), Vector2( 2.5, -16.5 ), Vector2( 5, -17 ), Vector2( 3, -16 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "voar"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Morte"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.8854 ), Vector2( 9.5, 14.5 ), Vector2( 28, 6.5 ), Vector2( 24.5, 7.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.1146 ), Vector2( 3.5, -8.5 ), Vector2( 3, 1.5 ), Vector2( 2.5, 0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.5 ), Vector2( 9.5, 14.5 ), Vector2( 28, 6.5 ), Vector2( 24.5, 7.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.5 ), Vector2( 3.5, -8.5 ), Vector2( 3, 1.5 ), Vector2( 2.5, 0.5 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.8854 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.1146 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Voando"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.5 ), Vector2( 20.5, 16 ), Vector2( 20.5, 14.5 ), Vector2( 19.5, 12.5 ), Vector2( 20.1, 12 ), Vector2( 21, 11.8904 ), Vector2( 20, 11.5 ), Vector2( 20, 11.8125 ), Vector2( 20, 12.0313 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.5 ), Vector2( 2.5, -17 ), Vector2( 2.5, -18.5 ), Vector2( 2.5, -15.5 ), Vector2( 2.1, -15 ), Vector2( 2, -14.1096 ), Vector2( 3, -13.5 ), Vector2( 3, -13.1875 ), Vector2( 3, -12.9688 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox/CollisionShape2D:shape:extents")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.5, 15.5 ), Vector2( 20.5, 16 ), Vector2( 20.5, 14.5 ), Vector2( 19.5, 12.5 ), Vector2( 20.1, 12 ), Vector2( 21, 11.9 ), Vector2( 20, 11.494 ), Vector2( 20, 11.8 ), Vector2( 20, 12 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hurtbox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.5, -16.5 ), Vector2( 2.5, -17 ), Vector2( 2.5, -18.5 ), Vector2( 2.5, -15.5 ), Vector2( 2.1, -15 ), Vector2( 2, -14.1 ), Vector2( 3, -13.506 ), Vector2( 3, -13.2 ), Vector2( 3, -13 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20.5, 15.5 )

[sub_resource type="CircleShape2D" id=8]
radius = 178.011

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 28.0316, 22.1917 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 29.5, 24 )

[node name="Olho_voador" type="KinematicBody2D" groups=["inimigos"]]
collision_layer = 2
script = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 12, -23 )
emitting = false
amount = 12
lifetime = 0.5
explosiveness = 0.8
randomness = 0.1
process_material = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -18 )
texture = ExtResource( 1 )
flip_h = true
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 2.5, -16.1146 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Voando"
anims/Atacar = SubResource( 4 )
anims/Dano = SubResource( 6 )
anims/Morte = SubResource( 7 )
anims/RESET = SubResource( 1 )
anims/Voando = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="." groups=["inimigos"]]
visible = false
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0.0509804, 0.0235294, 0.972549, 1 )
position = Vector2( 2.5, -16.5 )
shape = SubResource( 5 )

[node name="Detector_perseguir_jogador" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_perseguir_jogador"]
position = Vector2( 3, -16 )
shape = SubResource( 8 )

[node name="Detector_jogador" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_jogador"]
modulate = Color( 0.196078, 0.976471, 0.0352941, 1 )
position = Vector2( 0.320152, -22.6929 )
shape = SubResource( 21 )

[node name="Detector_ataque" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_ataque"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0.5, -22 )
shape = SubResource( 22 )

[node name="Vida" type="ColorRect" parent="."]
margin_left = -17.0
margin_top = -38.0
margin_right = 13.0
margin_bottom = -34.0
color = Color( 0, 0, 0, 0.509804 )

[node name="Barra" type="ColorRect" parent="Vida"]
margin_left = 1.0
margin_top = 1.0
margin_right = 29.0
margin_bottom = 3.0
color = Color( 0.0470588, 0.509804, 0.109804, 1 )

[node name="Som_dano" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="mudar_status_olho" from="." to="." method="_on_Olho_voador_mudar_status_olho"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Detector_perseguir_jogador" to="." method="_on_Detector_perseguir_jogador_body_entered"]
[connection signal="body_entered" from="Detector_jogador" to="." method="_on_Detector_jogador_body_entered"]
[connection signal="body_entered" from="Detector_ataque" to="." method="_on_Detector_ataque_body_entered"]
